--- a/templates/main/blog/blog_base.html
+++ b/templates/main/blog/blog_base.html
@@ -33,7 +33,7 @@
     {% endblock styles %}
 
 </head>
-<body>
+<body  style=" font-family: 'ui-sans-serif','serif';width: auto;">
 {% include 'main/blog/blog_nav.html' %}
 
 
