--- a/templates/portfolio_v2/header.html
+++ b/templates/portfolio_v2/header.html
@@ -16,7 +16,7 @@
             <div class="carousel-inner  ">
                 <div class="item active">
                     <div class="page-header "
-                         style="background-image: url({{ profile.profilePicsImageURL }});padding: 0px !important;margin-bottom: 0px !important;">
+                         style="background-image: url({{ layout.profilePicsImageURL }});padding: 0px !important;margin-bottom: 0px !important;">
                         <section
                                 class="my_background_color" {% comment %}style="min-height: 60vh!important;"{% endcomment %}>
                             <div class="container">
