--- a/templates/portfolio_v3/base_v3.html
+++ b/templates/portfolio_v3/base_v3.html
@@ -62,7 +62,7 @@
         }
 
         .background_image {
-            background-image: url("{{ profile.backgroundImageURL }}");
+            background-image: url("{{ layout.backgroundImageURL }}");
         }
 
         .secondary_color {
