--- a/templates/portfolio_v3/navwrapper.html
+++ b/templates/portfolio_v3/navwrapper.html
@@ -110,7 +110,7 @@
 
                         <!-- End Background overly of Header Home -->
 
-                        <img src="{{ profile.profilePicsImageURL }}" style="weight: 640px;height:690px "
+                        <img src="{{ layout.profilePicsImageURL }}" style="weight: 640px;height:690px "
                              class="img-responsive" alt="Background Home">
                         <!-- * img source -->
 
