--- a/templates/portfolio_v3/skills.html
+++ b/templates/portfolio_v3/skills.html
@@ -64,7 +64,7 @@
 
                 <!-- Start Box - Skills Picture -->
                 <div class="dark_background col-xs-12 col-sm-6 col-md-6 col-lg-6 box-skills-img">
-                    <img src="{{ profile.backgroundImageURL }}"
+                    <img src="{{ layout.backgroundImageURL }}"
                          class="img-responsive" style="width: 632px;height: 571px"
                          alt="img my skills">
                     <!-- * img source -->
