--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:800%7CPoppins:300i,300,400,500,600,700,400i,500%7CPlayfair+Display:400,700,900"
           rel="stylesheet">
 
-    <link type="text/css" rel="stylesheet" href="{% static 'lightbox/css/lightgallery.css' %}"/>
+    <link type="text/css" rel="stylesheet" href="{% static 'lightbox/css/magnific-popup/magnific-popup.css' %}"/>
     {% fontawesome_5_static %}
     <link rel="stylesheet" href="{% static 'portfolio_v1/assets/fonts/font-awesome/css/font-awesome.min.css' %}">
 
@@ -27,7 +27,7 @@
     <link href="{% static 'portfolio_app/assets/css/material-dashboard.css' %}" rel="stylesheet"/>
 
 </head>
-<body>
+<body style=" font-family: 'ui-sans-serif','serif';">
 <div class="wrapper " data-color="purple" data-background-color="black">
     <div class="sidebar" data-color="purple" data-background-color="black"
          data-image="{% static 'portfolio_app/assets/img/sidebar-1.jpg' %}">
@@ -225,36 +225,10 @@
 <!--   Core JS Files   -->
 <script src="{% static 'portfolio_v2/assets/js/jquery.min.js' %}" type="text/javascript"></script>
 
-<!-- A jQuery plugin that adds cross-browser mouse wheel su
+<!-- A jQuery plugin that adds cross-browser mouse wheel su -->
+<script src="{% static 'lightbox/js/magnific-popup/{% comment %}jquery.magnific-popup.js{% endcomment %}' %}" type="text/javascript"></script>
 
 
-pport. (Optional) -->
-<script src="{% static 'lightbox/js/jquery.mousewheel.min.js' %}"></script>
-<!-- lightgallery plugins -->
-<script src="{% static 'lightbox/js/lg-thumbnail.min.js' %}"></script>
-<script src="{% static 'lightbox/js/lg-fullscreen.min.js' %}"></script>
-
-<script src="{% static 'lightbox/js/picturefill.min.js' %}"></script>
-<script src="{% static 'lightbox/js/lightgallery.js' %}"></script>
-<script src="{% static 'lightbox/js/lg-pager.js' %}"></script>
-<script src="{% static 'lightbox/js/lg-autoplay.js' %}"></script>
-<script src="{% static 'lightbox/js/lg-zoom.js' %}"></script>
-<script src="{% static 'lightbox/js/lg-share.js' %}"></script>
-<script src="{% static 'lightbox/js/lg-rotate.js' %}"></script>
-<script>
-    {#lightGallery (document.getElementById ('lightgallery'));#}
-</script>
-<script>
-    $ ('#lightgallery').lightGallery ({
-        {#selector: '.gallery-item' ,#}
-        mode: 'lg-fade'
-    });
-    $ ('.captions').lightGallery ({
-        {#selector: '.gallery-item' ,#}
-        mode: 'lg-fade'
-    });
-
-</script>
 
 
 <script src="{% static 'portfolio_app/assets/js/core/popper.min.js' %}"></script>
