--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -29,7 +29,7 @@
                                         <div class="row">
                                             <label class="col-md-3 col-form-label">Country</label>
                                             <div class="col-md-9">
-                                                <div class="form-group has-default bmd-form-group">
+                                                <div class="form-group has-default bmd-form-group" style="background: none; border-radius: 0px; width: 50%;">
                                                     {{ profile_form.country|as_crispy_field }}
                                                 </div>
                                             </div>
@@ -110,92 +110,6 @@
                                         {{ profile_form.about|as_crispy_field }}
                                     </div>
                                     {% comment %} end_date of about {% endcomment %}
-
-                                    <div class="col-12">
-                                        <div class="row">
-                                            {% comment %} the profile logo{% endcomment %}
-                                            <div class=" col-sm-12 col-md-4 mx-auto">
-                                                <div class="row">
-                                                    <div class="col-md-8 offset-2">
-                                                        <div class="picture-container">
-
-                                                            <div class="card bg-primary">
-                                                                <div class="card-header  text-info">
-                                                                    Profile
-                                                                </div>
-                                                                <div class="card-image bg-primary">
-                                                                    <div class="picture">
-                                                                        <img src="{{ profile.profilePicsImageURL }}"
-                                                                             class="picture-src  profilePicturePreview"
-                                                                             id=profilePicturePreview" title=""
-                                                                             style="width:  30px;object-fit: contain">
-                                                                    </div>
-                                                                    <div class="">
-                                                                        {{ profile_form.profile_pics }}</div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            {% comment %} end_date of profile logo{% endcomment %}
-
-                                            {% comment %} the profile logo{% endcomment %}
-                                            <div class=" col-sm-12 col-md-4 mx-auto ">
-                                                <div class="row">
-                                                    <div class="col-md-8 offset-2">
-                                                        <div class="picture-container">
-                                                            <div class="card bg-primary">
-                                                                <div class="card-header text-info">
-                                                                    Logo
-                                                                </div>
-                                                                <div class="card-image">
-                                                                    <div class="picture">
-                                                                        <img src="{{ profile.logoImageURL }}"
-                                                                             class="picture-src  logoPicturePreview"
-                                                                             id=logoPicturePreview" title=""
-                                                                             style="width: 30px;object-fit: contain">
-                                                                    </div>
-                                                                    <div class="">
-                                                                        {{ profile_form.logo }}
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            {% comment %} end_date of profile logo{% endcomment %}
-
-                                            {% comment %} the background {% endcomment %}
-                                            <div class=" col-sm-12 col-md-4 mx-auto bg-light">
-                                                <div class="row">
-                                                    <div class="col-md-8 offset-2">
-                                                        <div class="picture-container ">
-
-                                                            <div class="card  bg-primary">
-                                                                <div class="card-header  text-info">
-                                                                    Background
-                                                                </div>
-                                                                <div class="card-image">
-                                                                    <div class="picture">
-                                                                        <img src="{{ profile.backgroundImageURL }}"
-                                                                             class="picture-src  backgroundImagePreview"
-                                                                             id=backgroundImagePreview" title=""
-                                                                             style="width: 30px;object-fit: contain">
-                                                                    </div>
-                                                                    <div class="">
-                                                                        {{ profile_form.background_image }}
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            {% comment %} end_date of background{% endcomment %}
-                                        </div>
-                                    </div>
 
                                     <div class="col-12">
                                         <button class="float-right btn   btn-outline-primary">Update</button>
