--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -31,6 +31,7 @@
     {% endblock styles %}
 
 </head>
+<body  style=" font-family: 'ui-sans-serif','serif';">
 {% block  base_content %}
 
 {% endblock base_content %}
