--- a/templates/portfolio_v1/about.html
+++ b/templates/portfolio_v1/about.html
@@ -24,7 +24,7 @@
 
             <div class="col-md-5">
                 <div class="fizo-image layout-1 " style="background-color: {{ layout.primary_color }} !important;">
-                    <img src="{{ profile.profilePicsImageURL }}" class="my_height" alt="">
+                    <img src="{{ layout.profilePicsImageURL }}" class="my_height" alt="">
 
                 </div>
             </div>
