--- a/templates/portfolio_v2/about.html
+++ b/templates/portfolio_v2/about.html
@@ -18,7 +18,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="card primary_color">
                         <div class="card-image">
-                            <img class="img-fluid" src="{{ profile.profilePicsImageURL }}" alt="" style="height: auto;">
+                            <img class="img-fluid" src="{{ layout.profilePicsImageURL }}" alt="" style="height: auto;">
                         </div>
                     </div>
                 </div>
