--- a/templates/portfolio_v3/about.html
+++ b/templates/portfolio_v3/about.html
@@ -26,7 +26,7 @@
 
                 <div class=" img-story">
 
-                    <img src="{{ profile.profilePicsImageURL }}" class="dark_background img-responsive"
+                    <img src="{{ layout.profilePicsImageURL }}" class="dark_background img-responsive"
                          alt="My picture" style="width: 497px;height: 384px" >
 
                 </div>
