--- a/templates/HomePage/payment_done.html
+++ b/templates/HomePage/payment_done.html
@@ -1,10 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'HomePage/home_base.html' %}
+{% load static %}
+{% block style %}
+
+{% endblock %}
+
+{% block title %}
+    Payment Successful
+{% endblock %}
+
+{% block content %}
+
+    <!-- Breadcrumbs -->
+    <div class="breadcrumbs" style="background-image:url({% static 'HomePage/img/breadcrumbs-bg.jpg' %})">
+        <div class="container">
+            <div class="row">
+                <!-- Breadcrumbs-Content -->
+                <div class="col-lg-7 col-md-7 col-12">
+                    <div class="breadcrumbs-content">
+                        <h2>Payment Successful</h2>
+                        <p>You have successful for .</p>
+                    </div>
+                </div>
+                <!-- Breadcrumbs-Menu -->
+                <div class="col-lg-5 col-md-5 col-12">
+                    <div class="breadcrumbs-menu">
+                        <ul>
+                            <li><a href="index.html">Home</a><i class="fa fa-angle-double-right"></i></li>
+                            <li class="active"><a href="#">Mail Success</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Breadcrumbs -->
+
+    <!-- Start Mail Success-->
+    <section class="success page">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <div class="mail">
+                        <h2>Payment Send <span>Successfully!</span></h2>
+                        <p>We have received your payment, You now have access to all contents on our website .
+                            Please wait. Thank you :)</p>
+                        <a class="theme-btn" href="{% url 'profile:dashboard' %}"><i class="fa fa-long-arrow-left"></i>Go
+                            Back to dashboard</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--/ End Mail Success -->
+{% endblock %}
+
