--- a/templates/mail-success.html
+++ b/templates/mail-success.html
@@ -344,3 +344,29 @@
 		<!-- End Jquery Plugin JS -->
 	</body>
 </html>
+
+
+{'status': True, 'message': 'Verification successful',
+
+'data': {'id': 1036773398, 'domain': 'test', 'status': 'success', 'reference': 'T985946375823995', 'amount': 10000000, 'message': N
+one, 'gateway_response': 'Successful', 'paid_at': '2021-03-12T19:55:10.000Z', 'created_at': '2021-03-12T19:54:50.000Z', 'channel': 'card', 'currency': 'NGN', 'ip_address': '197.210.54.80
+',
+'metadata':{'referrer': 'http://www.localhost:8000/payment/%23/Professional/'}, 'log': {'start_time': 1615578887, 'time_spent': 20, 'attempts': 1, 'errors': 0, 'success': True, 'mobi
+le': False, 'input': [], 'history':
+[{'type': 'action', 'message': 'Attempted to pay with card', 'time': 19}, {'type': 'success', 'message': 'Successfully paid with card', 'time': 20}]},
+ 'fees': 160000, 'fees_split': None,
+
+'authorization':{'authorization_code': 'AUTH_87ba6pdpqn', 'bin': '408408', 'last4': '4081', 'exp_month': '12', 'exp_year': '2030', 'channel': 'card'
+, 'card_type': 'visa ', 'bank': 'TEST BANK', 'country_code': 'NG', 'brand': 'visa', 'reusable': True, 'signature': 'SIG_OzArXB7DxBlOEkUV0Bjn', 'account_name': None, 'receiver_bank_accoun
+t_number': None, 'receiver_bank': None},
+
+'customer': {'id': 41032986,
+'first_name': 'codertjay', 'last_name': 'thankgod', 'email': 'codertjay@gmail.com', 'customer_code': 'CUS_l31zbhczbx
+gqadb', 'phone': '', 'metadata': None, 'risk_action': 'default', 'international_format_phone': None},
+
+'plan': 'PLN_g8i2xsu4xuyqs5m', 'split': {}, 'order_id': None,
+'paidAt': '2021-03-12T19:55:10.000Z', 'createdAt': '2021-03-12T19:54:50.000Z',
+'requested_amount': 10000000, 'pos_transaction_data': None, 'transaction_date': '2021-03-12T19:54:50.000Z',
+'plan_object': {'id':
+ 104254, 'name': 'Professional', 'plan_code': 'PLN_g8i2xsu4xuyqs5m', 'description': 'professional plan', 'amount': 10000000, 'interval': 'annually', 'send_invoices': True, 'send_sms': Tr
+ue, 'currency': 'NGN'}, 'subaccount': {}}}
