--- a/templates/portfolio/portfolio_v1/blog.html
+++ b/templates/portfolio/portfolio_v1/blog.html
@@ -21,7 +21,8 @@
                     <div class="dtr-blog-item">
                         <!-- image -->
                         <div class="dtr-post-img"><img src="{{ item.imageURL }}" alt="image"><span
-                                class="  dtr-category bg-blue color-white" style="color: white!important;">{{ item.get_category_display }}</span>
+                                class="  dtr-category bg-blue color-white"
+                                style="color: white!important;">{{ item.get_category_display }}</span>
                         </div>
                         <div class="dtr-post-content">
                             <ul class=" dtr-blog-meta color-grey">
@@ -44,8 +45,10 @@
         </div>
         <div class="row mt-5 pt-5">
             <div class="col-5 col-sm-offset-3 mx-auto">
-                <a href="{% host_url 'blog:blog_list' host 'www' %}"
+
+                <a href="{% host_url 'blog:blog_user_list' profile.user.username host 'www' %}"
                    class="  dtr-btn btn-blue dtr-mt-30">View more</a>
+
             </div>
         </div>
         <!--== row starts ==-->
